----------------------------

version 0.4.2
- effect inference algorithm 
  (jscontest.events.handler.effects.js or 
   jscontest.events.handler.effects2.js)
- default namespace: jscontest
  Under this namespace all the parts of the library does
  register themselves, e.g. jscontest.tests is the testing
  part of the library. 
- file names are now named: jscontest.*.js

version 0.2.0 (for compiler version 0.4.*):
- default namespace: PROGLANG
  Under this namespace all the parts of the library does
  register themselves, e.g. PROGLANG.tests is the testing
  part of the library. 

- new flexible event handler interface (proglang.events.js)

- new effect system added (proglang.effects.js)

- delta debbuing added (proglang.ddmin.js)

- enum logger (proglang.events.enum.js) hides large counter examples 
  and shows the smallest one for each contract. (used in combination 
  with delta debugging). 

- library slitted into different files
  - proglang.js
    This file contains the core of the JSConTest JavaScript 
    library. If you would like to use JSConTest you have to 
    include it always.
  - proglang.tests.js
    This file contains all the code for creating contests,
    and generating random tests from them. It also contains
    the checks for all the build-in contracts. 
  - proglang.events.js 
    The file contains the new event handler interface. Include
    it and call the fire function do fire events. The first
    parameter should be the message name, followed by the parameters
    of the event. 
  - proglang.events.*.js
    Event listeners. 
  - proglang.trans.js
    The transaction library with css-effects.
  - proglang.effects.js
    The effect system
  - proglang.ddmin.js
    If you include this file, the ddmin algorithm is used
    to minimize our test cases. 

- proglang.js analyzed with JSLint (passes "The good parts",
  except unknown identifier, since JSLint is not able to find
  function names correctly)


version 0.1.18: